--- a/tilecache.toml
+++ b/tilecache.toml
@@ -1,3 +1,8 @@
 
 [tilecache]
 cachedir='./tilecache'
+
+[tilecache.nameToUrl]
+USGSTopo = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSTopo/MapServer/tile'
+WorldGrey = 'https://services.arcgisonline.com/arcgis/rest/services//Canvas/World_Light_Gray_Base/MapServer/tile'
+WorldTopo = 'https://services.arcgisonline.com/arcgis/rest/services/World_Topo_Map/MapServer/tile'
