--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = scsntilecache
-version = 0.0.1-alpha
+version = 0.0.2
 author = Philip Crotwell
 author_email = crotwell@seis.sc.edu
 description = Very simple map tile cache
