--- a/tilecache.toml
+++ b/tilecache.toml
@@ -11,3 +11,5 @@ USGS_USImageryTopo = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSI
 USGSImageryOnly = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/'
 WorldOceanBase = 'https://services.arcgisonline.com/arcgis/rest/services/Ocean/World_Ocean_Base/MapServer/tile'
 NatGeo = 'https://server.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile'
+faults = 'https://earthquake.usgs.gov/basemap/tiles/faults/{z}/{y}/{x}.png'
+plates = 'https://earthquake.usgs.gov/basemap/tiles/plates/{z}/{y}/{x}.png'
