--- a/tilecache.toml
+++ b/tilecache.toml
@@ -13,3 +13,5 @@ WorldOceanBase = 'https://services.arcgisonline.com/arcgis/rest/services/Ocean/W
 NatGeo = 'https://server.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile'
 faults = 'https://earthquake.usgs.gov/basemap/tiles/faults/{z}/{y}/{x}.png'
 plates = 'https://earthquake.usgs.gov/basemap/tiles/plates/{z}/{y}/{x}.png'
+ushaz = 'https://earthquake.usgs.gov/basemap/tiles/ushaz/{z}/{y}/{x}.png'
+usgscatalog = 'https://earthquake.usgs.gov/arcgis/rest/services/eq/catalog/MapServer/tile/{z}/{y}/{x}'
