x,y flipped for usgs tiles?

--- a/tilecache.toml
+++ b/tilecache.toml
@@ -11,7 +11,7 @@ USGS_USImageryTopo = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSI
 USGSImageryOnly = 'https://basemap.nationalmap.gov/arcgis/rest/services/USGSImageryOnly/MapServer/tile/'
 WorldOceanBase = 'https://services.arcgisonline.com/arcgis/rest/services/Ocean/World_Ocean_Base/MapServer/tile'
 NatGeo = 'https://server.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile'
-faults = 'https://earthquake.usgs.gov/basemap/tiles/faults/{z}/{y}/{x}.png'
-plates = 'https://earthquake.usgs.gov/basemap/tiles/plates/{z}/{y}/{x}.png'
-ushaz = 'https://earthquake.usgs.gov/basemap/tiles/ushaz/{z}/{y}/{x}.png'
-usgscatalog = 'https://earthquake.usgs.gov/arcgis/rest/services/eq/catalog/MapServer/tile/{z}/{y}/{x}'
+faults = 'https://earthquake.usgs.gov/basemap/tiles/faults/{z}/{x}/{y}.png'
+plates = 'https://earthquake.usgs.gov/basemap/tiles/plates/{z}/{x}/{y}.png'
+ushaz = 'https://earthquake.usgs.gov/basemap/tiles/ushaz/{z}/{x}/{y}.png'
+usgscatalog = 'https://earthquake.usgs.gov/arcgis/rest/services/eq/catalog/MapServer/tile/{z}/{x}/{y}'
